# pg_embed

./: README.md  main.py  myapi.py  pyproject.toml  requirements.txt
mypgvector/: embed_image.py  image_embed_1.py  image_embed_2.py  pg_vector_util.py  schema.sql
templates/: chatbot.html  files.html  record.html  upload.html
