[project]
name = "PgEmbed"
version = "1.0"
requires-python = "==3.10.4"
dependencies = [
    "flask",
    "flask_cors",
    "flasgger",
    "uvicorn",
    "gunicorn",
    "load_dotenv",
    "psycopg2-binary",
    "torch",
    "torchvision",
    "pillow",
    "numpy<2",
    "transformers==4.41.2",
    "accelerate==0.30.1",
    "sentence-transformers==2.7.0"
]

[tool.setuptools.packages.find]
include = ["mypgvector*", "templates*"]
exclude = ["uploads*", "lib*", "share*", "include*"]






